--- a/FoC 2022/aboutme.html
+++ b/FoC 2022/aboutme.html
@@ -28,7 +28,7 @@
   
   <article>
     <h1>About Me</h1>
-    <p><img src="test.jpg" alt="Brent Burns" width="122" height="122" style="float:left; margin-right:50px">
+    <p><img src="abtme.jpg" alt="Brent Burns" width="122" height="122" style="float:left; margin-right:50px">
 Brent Burns. Savannah Road. Sacred Heart College Class of 2022. Skills.Problem Solving Hobbies. Reading.</p>
     </article>
 </section>
