--- a/FoC 2022/concepts.html
+++ b/FoC 2022/concepts.html
@@ -27,7 +27,7 @@
   </nav>
   
   <article>
-  <center> <a href="https://docs.google.com/presentation/d/1U9iXLG5U7AraTIjt5SQsIQRBqt_v-x6M59IeAXXUDR0/edit?usp=sharing"><img src="concepts.PNG" alt="Concepts" width="515" height="290" ></a>
+  <center> <a href="https://docs.google.com/presentation/d/1zow_Bjd7VCx88olF0auhUK_mDNusrIbQsdA2ECT8Zcw/edit#slide=id.p"><img src="concepts.PNG" alt="Concepts" width="515" height="290" ></a>
    <p></p>
 
     <p>Click on the image above for presentation.</p>
