--- a/FoC 2022/concepts.html
+++ b/FoC 2022/concepts.html
@@ -31,7 +31,7 @@
    <p></p>
 
     <p>Click on the image above for presentation.</p>
-	  <p> <a href="https://drive.google.com/file/d/1MQ6RLFJ4ePxckq2uc3vrH9X65NVjI4kb/view?usp=sharing">Click here for recording.</a></p></center>
+	  <p> <a href="https://docs.google.com/presentation/d/1zow_Bjd7VCx88olF0auhUK_mDNusrIbQsdA2ECT8Zcw/edit#slide=id.p">Click here for recording.</a></p></center>
     </article>
 </section>
 
